# ERA-V4-Mini-Capstone

./: .gitattributes  .gitignore  CUTMIX_COSINE_IMPLEMENTATION.md  README-logs.md  README.md  accuracy=0.774.ckpt  config.py  find_lr.py  freeze_model.py  imagenet_datamodule.py  imagenet_dataset.py  lr_finder_utils.py  main.py  notebook-local.ipynb  notebook-p3.16xlarge.ipynb  pyproject.toml  recipes.md  requirements.txt  resnet_module.py  resolution_schedule_callback.py  text_logging_callback.py  train.py  utils.py  write_data.py
configs/: README.md  __init__.py  base_config.py  config_manager.py  g5_config.py  g5d_config.py  local_config.py  p3_config.py  p4_config.py
docs/: BATCH_SIZE_LR_RELATIONSHIP.md  BEFORE_AFTER_COMPARISON.md  CHANGES_SUMMARY.md  CUTMIX_COSINE_IMPLEMENTATION.md  CUTMIX_COSINE_TESTS_SUMMARY.md  DDP_FIXES_SUMMARY.md  FFCV_INTEGRATION_SUMMARY.md  FIXRES_IMPLEMENTATION.md  FIXRES_IMPLEMENTATION_SUMMARY.md  LR_FINDER_GUIDE.md  LR_FINDER_SINGLE_GPU.md  LR_FINDER_VARIATION_EXPLAINED.md  MIXUP_LR_FINDER_GUIDE.md  MIXUP_TESTS_README.md  MIXUP_TESTS_SUMMARY.md  ONECYCLE_FIX.md  PROGRESSIVE_RESIZING_COMPOSER.md  PROGRESSIVE_RESIZING_UPDATE.md  README_FIXES.md  S3_IMPLEMENTATION_SUMMARY.md  S3_REMOTE_STORAGE_GUIDE.md  TRAINING_ANALYSIS_AND_FIXES.md  VERIFICATION_GUIDE.md  VERIFICATION_SUMMARY.md  VISUAL_COMPARISON.md
huggingface_app/: app.py  requirements.txt
logs/: events_out_tfevents_1762027758_ip_172_31_33_55_ec2_internal_512377  events_out_tfevents_1762044905_ip_172_31_33_55_ec2_internal_687305  hparams.yaml  metrics.json  model_info.txt
(+17 files in other folders)
